--- a/index.html
+++ b/index.html
@@ -72,20 +72,20 @@
 
       <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
-          <a href="cs.html"><img src="img/cscover2.jpg" style="width:100%"></a>
+          <a href="cs.html"><img src="cscover2.jpg" style="width:100%"></a>
           <div class="text">Download Counter-Strike</div>
         </div>
   
         <div class="mySlides fade">
           <div class="numbertext">2 / 3</div>
-          <a href="vice.html"><img  src="img/vice2.jpg" style="width:100%"></a>
+          <a href="vice.html"><img  src="vice2.jpg" style="width:100%"></a>
           
           <div class="text">Download GTA Vice City</div>
         </div>
   
         <div class="mySlides fade">
           <div class="numbertext">3 / 3</div>
-          <a href="igi1.html"><img  src="img/IGIcover2.jpg" style="width:100%"></a>
+          <a href="igi1.html"><img  src="IGIcover2.jpg" style="width:100%"></a>
           <div class="text">Download IGI1</div>
         </div>
 
